# shared-kernel-rs

./: .gitignore  CHANGELOG.md  README.md  flake.nix
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/benches/: redis_patterns.rs  serialization.rs  utils.rs
crates/shared/src/: lib.rs
crates/shared/src/db/: config.rs  error.rs  migrate.rs  mod.rs  pool.rs  replica.rs  tx.rs
crates/shared/src/db/kv/: entity.rs  mesh.rs  mod.rs  queries.rs
crates/shared/src/middleware/: incoming_request.rs  mod.rs  request_id.rs  utils.rs
crates/shared/src/redis/: commands.rs  error.rs  types.rs
crates/shared/src/tools/: aws.rs  callapi.rs  cloud_storage.rs  gcs.rs  logger.rs  mod.rs  prometheus.rs  utils.rs
crates/shared/src/types/: id.rs
crates/tests/: Cargo.toml
crates/tests/src/: db_tests.rs  kv_tests.rs  lib.rs
nix/: scripts.nix
